test/classes/delete-free/undecorated-generic/no-coercion-management-type1g.good
no-coercion-management-type1g.chpl:8: error: unresolved call 'f(type unmanaged Child(int(64)))'
no-coercion-management-type1g.chpl:4: note: this candidate did not match: f(type t: borrowed Parent)
no-coercion-management-type1g.chpl:8: note: because call actual argument #1 with type unmanaged Child(int(64))
no-coercion-management-type1g.chpl:4: note: is passed to formal 't: borrowed Parent'
